--- a/views/addPlayers.ejs
+++ b/views/addPlayers.ejs
@@ -3,79 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Add Players</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <section class="container">
     <h1>Hello players</h1>
 
     <span>Please input your names and starting cards:</span>
     <br>
-        <input type="text" class="playerOneName" value="Alex">
-        <input type="radio" id="ace" name="playerOneCard" value="ace">
-        <label for="ace">ace</label>
-        <input type="radio" id="two" name="playerOneCard" value="2">
-        <label for="two">2</label>
-        <input type="radio" id="three" name="playerOneCard" value="3">
-        <label for="three">3</label>
-        <input type="radio" id="four" name="playerOneCard" value="4">
-        <label for="four">4</label>
-        <input type="radio" id="five" name="playerOneCard" value="5">
-        <label for="five">5</label>
-        <input type="radio" id="six" name="playerOneCard" value="6">
-        <label for="six">6</label>
-        <input type="radio" id="seven" name="playerOneCard" value="7">
-        <label for="seven">7</label>
-        <input type="radio" id="eight" name="playerOneCard" value="8">
-        <label for="eight">8</label>
-        <input type="radio" id="nine" name="playerOneCard" value="9">
-        <label for="nine">9</label>
-        <input type="radio" id="ten" name="playerOneCard" value="10">
-        <label for="ten">10</label>
-        <input type="radio" id="jack" name="playerOneCard" value="11">
-        <label for="jack">jack</label>
-        <input type="radio" id="queen" name="playerOneCard" value="12">
-        <label for="queen">queen</label>
-        <input type="radio" id="king" name="playerOneCard" value="13">
-        <label for="king">king</label>
+    <input type="text" class="playerOneName" value="Alex">
 
-
-
-
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="1">
+            <span>ace</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="2">
+            <span>2</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="3">
+            <span>3</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="4">
+            <span>four</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="5">
+            <span>5</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="6">
+            <span>6</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="7">
+            <span>7</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="8">
+            <span>8</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="9">
+            <span>9</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="10">
+            <span>10</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="11">
+            <span>jack</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="12">
+            <span>queen</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerOneCard" value="13">
+            <span>king</span>
+        </label>
 
         <br>
         <input type="text" class="playerTwoName" value="Lawrence">
-        <input type="radio" id="ace" name="playerTwoCard" value="ace">
-        <label for="ace">ace</label>
-        <input type="radio" id="two" name="playerTwoCard" value="2">
-        <label for="two">2</label>
-        <input type="radio" id="three" name="playerTwoCard" value="3">
-        <label for="three">3</label>
-        <input type="radio" id="four" name="playerTwoCard" value="4">
-        <label for="four">4</label>
-        <input type="radio" id="five" name="playerTwoCard" value="5">
-        <label for="five">5</label>
-        <input type="radio" id="six" name="playerTwoCard" value="6">
-        <label for="six">6</label>
-        <input type="radio" id="seven" name="playerTwoCard" value="7">
-        <label for="seven">7</label>
-        <input type="radio" id="eight" name="playerTwoCard" value="8">
-        <label for="eight">8</label>
-        <input type="radio" id="nine" name="playerTwoCard" value="9">
-        <label for="nine">9</label>
-        <input type="radio" id="ten" name="playerTwoCard" value="10">
-        <label for="ten">10</label>
-        <input type="radio" id="jack" name="playerTwoCard" value="11">
-        <label for="jack">jack</label>
-        <input type="radio" id="queen" name="playerTwoCard" value="12">
-        <label for="queen">queen</label>
-        <input type="radio" id="king" name="playerTwoCard" value="13">
-        <label for="king">king</label>
+
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="1">
+            <span>ace</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="2">
+            <span>2</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="3">
+            <span>3</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="4">
+            <span>four</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="5">
+            <span>5</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="6">
+            <span>6</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="7">
+            <span>7</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="8">
+            <span>8</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="9">
+            <span>9</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="10">
+            <span>10</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="11">
+            <span>jack</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="12">
+            <span>queen</span>
+        </label>
+        <label>
+            <input type="radio" class="ace" name="playerTwoCard" value="13">
+            <span>king</span>
+        </label>
 
         <br>
-        <button type="submit" class="submitPlayerValues">Start Game</button>
+        <button type="submit" class="btn waves-effect waves-light hoverable submitPlayerValues">Start Game</button>
+
+    </section>
 
     <script src="/js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
