--- a/views/playerTurn.ejs
+++ b/views/playerTurn.ejs
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    
+    <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Player Turn</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     
+    <section class="container">
     <h1><%=player.name%>'s Turn</h1>
     <span class="gameId hidden"><%=gameId%></span>
     <span class="player hidden"><%=playerNum%></span>
@@ -18,18 +24,32 @@
     <span class="numDrawnCards">1</span>
 
     <br>
-    <input type="radio" id="one" name="cardsDrawn" value="1" checked>
-    <label for="one">1</label>
-    <input type="radio" id="two" name="cardsDrawn" value="2">
-    <label for="two">2</label>
-    <input type="radio" id="three" name="cardsDrawn" value="3">
-    <label for="three">3</label>
-    <input type="radio" id="four" name="cardsDrawn" value="4">
-    <label for="four">4</label>
-    <input type="radio" id="five" name="cardsDrawn" value="5">
-    <label for="five">5</label>
+    <label>
+        <input type="radio" class="0" name="cardsDrawn" value="0">
+        <span>0</span>
+    </label>
+    <label>
+        <input type="radio" class="1" name="cardsDrawn" value="1" checked>
+        <span>1</span>
+    </label>
+    <label>
+        <input type="radio" class="2" name="cardsDrawn" value="2">
+        <span>2</span>
+    </label>
+    <label>
+        <input type="radio" class="3" name="cardsDrawn" value="3">
+        <span>3</span>
+    </label>
+    <label>
+        <input type="radio" class="4" name="cardsDrawn" value="4">
+        <span>four</span>
+    </label>
+    <label>
+        <input type="radio" class="5" name="cardsDrawn" value="5">
+        <span>5</span>
+    </label>
 
-    <button type="button" class="addFive">Add Five</button>
+    <button type="button" class="btn addFive">Add Five</button>
 
     <br>
     
@@ -37,37 +57,70 @@
     <span class="newStackCard"></span>
 
     <br>
-    <input type="radio" id="ace" name="stackCard" value="ace">
-    <label for="ace">ace</label>
-    <input type="radio" id="two" name="stackCard" value="2">
-    <label for="two">2</label>
-    <input type="radio" id="three" name="stackCard" value="3">
-    <label for="three">3</label>
-    <input type="radio" id="four" name="stackCard" value="4">
-    <label for="four">4</label>
-    <input type="radio" id="five" name="stackCard" value="5">
-    <label for="five">5</label>
-    <input type="radio" id="six" name="stackCard" value="6">
-    <label for="six">6</label>
-    <input type="radio" id="seven" name="stackCard" value="7">
-    <label for="seven">7</label>
-    <input type="radio" id="eight" name="stackCard" value="8">
-    <label for="eight">8</label>
-    <input type="radio" id="nine" name="stackCard" value="9">
-    <label for="nine">9</label>
-    <input type="radio" id="ten" name="stackCard" value="10">
-    <label for="ten">10</label>
-    <input type="radio" id="jack" name="stackCard" value="11">
-    <label for="jack">jack</label>
-    <input type="radio" id="queen" name="stackCard" value="12">
-    <label for="queen">queen</label>
-    <input type="radio" id="king" name="stackCard" value="13">
-    <label for="king">king</label>
+
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="1">
+        <span>ace</span>
+    </label>
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="2">
+        <span>2</span>
+    </label>
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="3">
+        <span>3</span>
+    </label>
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="4">
+        <span>four</span>
+    </label>
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="5">
+        <span>5</span>
+    </label>
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="6">
+        <span>6</span>
+    </label>
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="7">
+        <span>7</span>
+    </label>
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="8">
+        <span>8</span>
+    </label>
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="9">
+        <span>9</span>
+    </label>
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="10">
+        <span>10</span>
+    </label>
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="11">
+        <span>jack</span>
+    </label>
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="12">
+        <span>queen</span>
+    </label>
+    <label>
+        <input type="radio" class="ace" name="stackCard" value="13">
+        <span>king</span>
+    </label>
+  
+
+    <button type="button" class="btn remove">Remove Stack Card</button>
 
     <br>
-    <button type="submit" class="endGame">End Game</button>
-    <button type="submit" class="endTurn">End Turn</button>
+    <button type="submit" class="btn endGame">End Game</button>
+    <button type="submit" class="btn endTurn">End Turn</button>
 
+    </section>
     <script src="/js/playerTurn.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </body>
 </html>
