modifying game model to add remainingCards attribute

--- a/views/addPlayers.ejs
+++ b/views/addPlayers.ejs
@@ -21,55 +21,55 @@
     <input type="text" class="playerOneName" value="Alex">
 
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="1">
+            <input type="radio" name="playerOneCard" value="1">
             <span>ace</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="2">
+            <input type="radio" name="playerOneCard" value="2">
             <span>2</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="3">
+            <input type="radio" name="playerOneCard" value="3">
             <span>3</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="4">
-            <span>four</span>
+            <input type="radio" name="playerOneCard" value="4">
+            <span>4</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="5">
+            <input type="radio" name="playerOneCard" value="5">
             <span>5</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="6">
+            <input type="radio" name="playerOneCard" value="6">
             <span>6</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="7">
+            <input type="radio" name="playerOneCard" value="7">
             <span>7</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="8">
+            <input type="radio" name="playerOneCard" value="8">
             <span>8</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="9">
+            <input type="radio" name="playerOneCard" value="9">
             <span>9</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="10">
+            <input type="radio" name="playerOneCard" value="10">
             <span>10</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="11">
+            <input type="radio" name="playerOneCard" value="11">
             <span>jack</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="12">
+            <input type="radio" name="playerOneCard" value="12">
             <span>queen</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerOneCard" value="13">
+            <input type="radio" name="playerOneCard" value="0">
             <span>king</span>
         </label>
 
@@ -77,55 +77,55 @@
         <input type="text" class="playerTwoName" value="Lawrence">
 
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="1">
+            <input type="radio" name="playerTwoCard" value="1">
             <span>ace</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="2">
+            <input type="radio" name="playerTwoCard" value="2">
             <span>2</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="3">
+            <input type="radio" name="playerTwoCard" value="3">
             <span>3</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="4">
-            <span>four</span>
+            <input type="radio" name="playerTwoCard" value="4">
+            <span>4</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="5">
+            <input type="radio" name="playerTwoCard" value="5">
             <span>5</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="6">
+            <input type="radio" name="playerTwoCard" value="6">
             <span>6</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="7">
+            <input type="radio" name="playerTwoCard" value="7">
             <span>7</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="8">
+            <input type="radio" name="playerTwoCard" value="8">
             <span>8</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="9">
+            <input type="radio" name="playerTwoCard" value="9">
             <span>9</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="10">
+            <input type="radio" name="playerTwoCard" value="10">
             <span>10</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="11">
+            <input type="radio" name="playerTwoCard" value="11">
             <span>jack</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="12">
+            <input type="radio" name="playerTwoCard" value="12">
             <span>queen</span>
         </label>
         <label>
-            <input type="radio" class="ace" name="playerTwoCard" value="13">
+            <input type="radio" name="playerTwoCard" value="0">
             <span>king</span>
         </label>
 
