--- a/views/endGame.ejs
+++ b/views/endGame.ejs
@@ -15,70 +15,169 @@
 <body>
     <section class="container">
     
-    <h1>Enter <%=player.name%>'s remaining cards:</h1>
+    <h1>Number of <%=player.name%>'s remaining cards:</h1>
     <span class="gameId hidden"><%=gameId%></span>
     <span class="player hidden"><%=playerNum%></span>
 
-    <span class="remainingCards"></span>
-
+    <h3 class="remainingCards"></h3>
     <br>
 
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="1">
-        <span>ace</span>
+        <input type="radio" name="remainingCards" value="1">
+        <span>1</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="2">
+        <input type="radio" name="remainingCards" value="2">
         <span>2</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="3">
+        <input type="radio" name="remainingCards" value="3">
         <span>3</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="4">
-        <span>four</span>
+        <input type="radio" name="remainingCards" value="4">
+        <span>4</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="5">
+        <input type="radio" name="remainingCards" value="5">
         <span>5</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="6">
+        <input type="radio" name="remainingCards" value="6">
         <span>6</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="7">
+        <input type="radio" name="remainingCards" value="7">
         <span>7</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="8">
+        <input type="radio" name="remainingCards" value="8">
         <span>8</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="9">
+        <input type="radio" name="remainingCards" value="9">
         <span>9</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="10">
+        <input type="radio" name="remainingCards" value="10">
         <span>10</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="11">
-        <span>jack</span>
+        <input type="radio" name="remainingCards" value="11">
+        <span>11</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="12">
-        <span>queen</span>
+        <input type="radio" name="remainingCards" value="12">
+        <span>12</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="remainingStackCard" value="13">
-        <span>king</span>
+        <input type="radio" name="remainingCards" value="13">
+        <span>13</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="14">
+        <span>14</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="15">
+        <span>15</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="16">
+        <span>16</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="17">
+        <span>17</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="18">
+        <span>18</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="19">
+        <span>19</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="20">
+        <span>20</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="22">
+        <span>22</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="23">
+        <span>23</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="24">
+        <span>24</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="25">
+        <span>25</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="26">
+        <span>26</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="27">
+        <span>27</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="28">
+        <span>28</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="29">
+        <span>29</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="30">
+        <span>30</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="31">
+        <span>31</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="32">
+        <span>32</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="33">
+        <span>33</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="34">
+        <span>34</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="35">
+        <span>35</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="36">
+        <span>36</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="37">
+        <span>37</span>
+    </label>
+    <label>
+        <input type="radio" name="remainingCards" value="38">
+        <span>38</span>
     </label>
 
-    <button type="submit" class="btn remove">Remove</button>
-    <br>
+
+
+
+
+
     <button type="submit" class="btn addCards">Submit</button>
+
 </section>
 
     <script src="/js/endGame.js"></script>
