--- a/views/playerTurn.ejs
+++ b/views/playerTurn.ejs
@@ -42,7 +42,7 @@
     </label>
     <label>
         <input type="radio" class="4" name="cardsDrawn" value="4">
-        <span>four</span>
+        <span>4</span>
     </label>
     <label>
         <input type="radio" class="5" name="cardsDrawn" value="5">
@@ -72,7 +72,7 @@
     </label>
     <label>
         <input type="radio" class="ace" name="stackCard" value="4">
-        <span>four</span>
+        <span>4</span>
     </label>
     <label>
         <input type="radio" class="ace" name="stackCard" value="5">
@@ -107,7 +107,7 @@
         <span>queen</span>
     </label>
     <label>
-        <input type="radio" class="ace" name="stackCard" value="13">
+        <input type="radio" class="ace" name="stackCard" value="0">
         <span>king</span>
     </label>
   
